[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gallimimus"
version = "1.0.0"
dependencies = [
    "jax",
    "flax",
    "optax",
    "transformers",
    "tensorboard",
    "tensorflow",
    "lora_flax@git+https://github.com/sarus-tech/gallimimus.git@lora-flax"
]



[tool.black]
line-length = 88
experimental-string-processing = true
target-version = ['py36','py37','py38',]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
force-exclude = '.*_pb2\.py*'

[tool.isort]
profile = "black"

[tool.docformatter]
black = true